# mivia_rover_nav2_bringup

./: .gitignore  CMakeLists.txt  package.xml
config/: mivia_rover_nav2_config.yaml  mivia_rover_nav2_config_sim.yaml  mivia_rover_nav2_exp_dwb_config.yaml
config/dwb/: exp_intermedia.yaml  exp_massima.yaml  exp_minima.yaml  exp_settingA.yaml
config/rpp/: exp_rpp_setting_intermedia.yaml  exp_rpp_setting_minima.yaml  exp_rpp_setting_spinta.yaml  exp_settingB.yaml  report_rpp_settings.md
launch/: mivia_rover_nav2_bringup.launch.py
scripts/: set_velocity_smoother_params.sh
src/: twist_adapter_node.cpp
